--- a/src/web-presentation-keyboardcontrols.html
+++ b/src/web-presentation-keyboardcontrols.html
@@ -1,25 +1,27 @@
 <script>
-  var keyboardControlsProto = Object.create(HTMLElement.prototype);
+  (function(){
+    class WebPresentationKeyboardControlsElement extends HTMLElement {
+      constructor() {
+        super();
+      }
 
-  keyboardControlsProto.createdCallback = keyboardControlsProtoCreatedCallback;
+      connectedCallback() {
+        document.onkeydown = (event) => {
+          switch (event.keyCode) {
+            case 32:
+            case 34:
+            case 39:
+              this.parentNode.nextStep();
+              break;
+            case 33:
+            case 37:
+              this.parentNode.prevStep();
+              break;
+          }
+        };
+      }
+    }
 
-  function keyboardControlsProtoCreatedCallback() {
-    var keyboardcontrols = this;
-
-    document.onkeydown = function (event) {
-        switch (event.keyCode) {
-          case 32:
-          case 34:
-          case 39:
-            keyboardcontrols.parentNode.nextStep();
-            break;
-          case 33:
-          case 37:
-            keyboardcontrols.parentNode.prevStep();
-            break;
-        }
-    };
-  }
-
-  document.registerElement('web-presentation-keyboardcontrols', {prototype: keyboardControlsProto});
+    customElements.define('web-presentation-keyboardcontrols', WebPresentationKeyboardControlsElement);
+  })();
 </script>
