--- a/src/web-presentation-progress.html
+++ b/src/web-presentation-progress.html
@@ -13,10 +13,10 @@
     #progress {
       width: 10%;
       height: 100%;
-      background: rgba(70,255,140,0.9);
+      background: #00FFFF;
       transition: width 0.5s;
     }
-    
+
     @media print {
       :host {
         display: none;
@@ -26,25 +26,45 @@
   <div id="progress"></div>
 </template>
 <script>
-  (function() {
-    var progressProto = Object.create(HTMLElement.prototype);
-    var importDoc = document.currentScript.ownerDocument;
-  
-    progressProto.createdCallback = progressProtoCreatedCallback;
-  
-    function progressProtoCreatedCallback() {
-      var template = importDoc.querySelector('#template-web-presentation-progress');
-      var templateContent = document.importNode(template.content, true);
-      this.createShadowRoot().appendChild(templateContent);
-  
-      this.parentNode.addEventListener('SlideChanged', updateProgress.bind(this), false);
+  (function(){
+    const importDoc = (document._currentScript || document.currentScript).ownerDocument;
+    const templateContent = importDoc.querySelector('template#template-web-presentation-progress').content;
+
+    class WebPresentationProgressElement extends HTMLElement {
+      static get observedAttributes() {
+        return ['color'];
+      }
+
+      constructor() {
+        super();
+      }
+
+      connectedCallback() {
+        const shadowRoot = this.attachShadow({mode: 'open'});
+        shadowRoot.appendChild(templateContent.cloneNode(true));
+        this.parentNode.addEventListener('SlideChanged', (e) => this.updateProgress(e), false);
+
+        if (this.getAttribute('color')) {
+          this.setColor(this.getAttribute('color'));
+        }
+      }
+
+      attributeChangedCallback(attributeName, oldValue, newValue, namespace) {
+        if (attributeName === 'color') {
+          this.setColor(newValue);
+        }
+      }
+
+      setColor(color) {
+        this.shadowRoot.querySelector('#progress').style.background = color;
+      }
+
+      updateProgress(e) {
+        var percentage = e.detail.current / (e.detail.total-1) * 100;
+        this.shadowRoot.getElementById("progress").style.width = percentage + "%";
+      }
     }
-  
-    function updateProgress(e) {
-      var percentage = e.detail.current / (e.detail.total-1) * 100;
-      this.shadowRoot.getElementById("progress").style.width = percentage + "%";
-    }
-  
-    document.registerElement('web-presentation-progress', {prototype: progressProto});  
+
+    customElements.define('web-presentation-progress', WebPresentationProgressElement);
   })();
 </script>
