--- a/src/web-slide-title.html
+++ b/src/web-slide-title.html
@@ -1,31 +1,33 @@
 <template id="template-web-slide-title">
   <style>
     :host {
-      background: #03A9F4;
-      color: #FFF;
+      background: #f2f2f2;
+      color: #222;
     }
 
     ::content h1 {
       font-size: 3em;
     }
   </style>
+
 </template>
 
 <script>
   (function(){
-    var slideTitleProto = Object.create(slideProto),
-      importDoc = document.currentScript.ownerDocument;
+    const importDoc = (document._currentScript || document.currentScript).ownerDocument;
+    const templateContent = importDoc.querySelector('template#template-web-slide-title').content;
 
-    slideTitleProto.createdCallback = slideTitleProtoCreatedCallback;
+    class WebSlideTitleElement extends WebSlideElement {
+      constructor() {
+        super();
+      }
 
-    function slideTitleProtoCreatedCallback(){
-      slideProto.createdCallback.call(this);
-
-      var template = importDoc.querySelector('#template-web-slide-title');
-      var templateContent = document.importNode(template.content, true);
-      this.shadowRoot.insertBefore(templateContent, this.shadowRoot.querySelector('#content'));
+      connectedCallback() {
+        super.connectedCallback();
+        this.shadowRoot.insertBefore(templateContent, this.shadowRoot.querySelector('#content'))
+      }
     }
 
-    document.registerElement('web-slide-title', {prototype: slideTitleProto});
+    customElements.define('web-slide-title', WebSlideTitleElement);
   })();
 </script>
