Added background position

--- a/src/web-slide.html
+++ b/src/web-slide.html
@@ -12,6 +12,7 @@
       opacity: 0;
       background: #222;
       background-size: cover;
+      background-position: center center;
       color: #fff;
       font-family: sans-serif;
     }
